bespin_web loaddata docker detach=false

--- a/bespin_web/tasks/loaddata.yml
+++ b/bespin_web/tasks/loaddata.yml
@@ -17,6 +17,7 @@
     image: dukegcb/bespin-web
     pull: true
     state: started
+    detach: false
     env: "{{ web_environment }}"
     volumes:
       - /etc/external/:/etc/external/
@@ -31,6 +32,7 @@
     image: dukegcb/bespin-web
     pull: true
     state: started
+    detach: false
     env: "{{ web_environment }}"
     volumes:
       - /etc/external/:/etc/external/
