Update bespin-web to use duke-gcb/bespin-api:<version>-apache

--- a/bespin_web/tasks/run-server.yml
+++ b/bespin_web/tasks/run-server.yml
@@ -27,7 +27,7 @@
 
 - name: Create app container
   docker_container:
-    image: dukegcb/bespin-web
+    image: "dukegcb/bespin-api:{{ bespin_settings.web.version }}-apache"
     name: bespin-web
     env: "{{ web_environment }}"
     volumes:
