bespin_web: clear out ui dir manually
Persist shared volume directory used in apache config /srv/ui
Instead we just remove the contents and recreate them

--- a/bespin_web/tasks/run-server.yml
+++ b/bespin_web/tasks/run-server.yml
@@ -9,15 +9,13 @@
   copy: src="../../../files/{{ bespin_settings.web.ssl_key_file }}" dest="{{ bespin_settings.web.ssl_dir }}/privkey.pem"
         mode=400
 
-- name: Remove existing ui directory
-  file:
-    state: absent
-    path: "{{ bespin_settings.ui.srv_dir }}"
-
-- name: Make empty ui directory
+- name: Make ui directory
   file:
     state: directory
     path: "{{ bespin_settings.ui.srv_dir }}"
+
+- name: Clear out existing ui data
+  shell: /bin/rm -rf /srv/ui/*
 
 - name: Download bespin-ui release tar.gz
   unarchive:
@@ -40,4 +38,3 @@
     etc_hosts: "{{ bespin_hosts_list }}"
     state: started
     restart_policy: always
-    restart: true
