add message explaining change

--- a/bespin_web/tasks/run-server.yml
+++ b/bespin_web/tasks/run-server.yml
@@ -14,6 +14,7 @@
     state: directory
     path: "{{ bespin_settings.ui.srv_dir }}"
 
+# Clearing out the directory manually because removing and recreating the directory left apache in a bad state (404 errors).
 - name: Clear out existing ui data
   shell: /bin/rm -rf /srv/ui/*
 
