--- a/jupyterhub/defaults/main.yml
+++ b/jupyterhub/defaults/main.yml
@@ -4,3 +4,5 @@ authenticator: "pam"
 docker_image: "jupyterhub/singleuser"
 slurm_partition: "all"
 slurm_account: ""
+req_runtime: 120
+req_memory: 4096
