Revert "Update lando docker image to use current dev image"
Now that changes have been merged, not necessary to use dev image

This reverts commit 5cbba82310e72e0a71d602a8c9554cc1c8b014d7.

--- a/bespin_lando/tasks/main.yml
+++ b/bespin_lando/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: Create app container
   docker_container:
-    image: dukegcb/bespin-lando:92-per-job-vm-details
+    image: dukegcb/bespin-lando
     name: bespin-lando
     volumes:
       - /etc/lando_config.yml:/etc/lando_config.yml
