Expects lando version to be specified in bespin_settings
- Renames bespin_settings.worker_openstack to bespin_settings.lando settings section

--- a/bespin_lando/tasks/main.yml
+++ b/bespin_lando/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: Create app container
   docker_container:
-    image: dukegcb/bespin-lando
+    image: "dukegcb/bespin-lando:{{ bespin_settings.lando.version }}"
     name: bespin-lando
     volumes:
       - /etc/lando_config.yml:/etc/lando_config.yml
