Open port on firewall

--- a/d4s2_webapp/tasks/main.yml
+++ b/d4s2_webapp/tasks/main.yml
@@ -25,3 +25,8 @@
     pull: true
     state: started
     restart_policy: always
+- name: Open firewall
+  firewalld:
+    service: https
+    permanent: true
+    state: enabled
