--- a/copy_bespin_hosts/tasks/main.yml
+++ b/copy_bespin_hosts/tasks/main.yml
@@ -1,12 +1,12 @@
 - name: Determine bespin hostnames based on environment (dev vs prod)
   set_fact:
     bespin_hosts: |
-      {{ hostvars['bespin_' + bespin_env + '_rabbit']['ansible_host'] }} bespin-{{ bespin_env }}-rabbit
-      {{ hostvars['bespin_' + bespin_env + '_web']['ansible_host'] }} bespin-{{ bespin_env }}-web
-      {{ hostvars['bespin_' + bespin_env + '_lando']['ansible_host'] }} bespin-{{ bespin_env }}-lando
-      {{ hostvars['bespin_' + bespin_env + '_database']['ansible_host'] }} bespin-{{ bespin_env }}-database
-      {{ hostvars['bespin_' + bespin_env + '_nfs']['ansible_host'] }} bespin-{{ bespin_env }}-nfs
-      {{ hostvars['bespin_' + bespin_env + '_job_watcher']['ansible_host'] }} bespin-{{ bespin_env }}-job-watcher
+      {{ hostvars['bespin-' + bespin_env + '-rabbit']['ansible_host'] }} bespin-{{ bespin_env }}-rabbit
+      {{ hostvars['bespin-' + bespin_env + '-web']['ansible_host'] }} bespin-{{ bespin_env }}-web
+      {{ hostvars['bespin-' + bespin_env + '-lando']['ansible_host'] }} bespin-{{ bespin_env }}-lando
+      {{ hostvars['bespin-' + bespin_env + '-database']['ansible_host'] }} bespin-{{ bespin_env }}-database
+      {{ hostvars['bespin-' + bespin_env + '-nfs']['ansible_host'] }} bespin-{{ bespin_env }}-nfs
+      {{ hostvars['bespin-' + bespin_env + '-job-watcher']['ansible_host'] }} bespin-{{ bespin_env }}-job-watcher
 
 - name: Add bespin hosts to /etc/hosts
   blockinfile:
