--- a/d4s2_webapp/tasks/main.yml
+++ b/d4s2_webapp/tasks/main.yml
@@ -19,7 +19,7 @@
 - name: Create app container
   docker_container:
     image: "{{ d4s2_docker_image }}"
-    name: api
+    name: d4s2-app
     networks:
       - name: "{{ d4s2_docker_network }}"
     env: "{{ d4s2_docker_env }}"
@@ -37,10 +37,10 @@
     state: started
     restart_policy: always
     command: python manage.py process_tasks
-- name: Create reverse proxy container
+- name: Create reverse proxy web container
   docker_container:
     image: nginx:1.13
-    name: revproxy
+    name: web
     networks:
       - name: "{{ d4s2_docker_network }}"
     volumes:
