Move nginx conf into d4s2_webapp role, apply reasonable defaults
host vars no longer need to provide any nginx config, it's all in the role.

- Steps that place file are now in d4s2_webapp/tasks/main.yml
- Reasonable defaults in d4s2_webapp/defaults/main.yml
- Config file is now in d4s2/files/nginx.conf

--- a/d4s2_webapp/tasks/main.yml
+++ b/d4s2_webapp/tasks/main.yml
@@ -1,3 +1,10 @@
+- name: Make nginx directory
+  file: path={{ d4s2_nginx_conf_dir }} state=directory
+- name: Place nginx conf
+  copy: src="{{ d4s2_nginx_conf_file }}"
+        dest="{{ d4s2_nginx_conf_dir }}/{{ d4s2_nginx_conf_file }}"
+        mode=0400
+        setype="svirt_sandbox_file_t"
 - name: Login to docker registry
   docker_login:
     registry: "{{ docker_registry }}"
