Put nginx conf dir and file name under a dictionary

--- a/d4s2_webapp/defaults/main.yml
+++ b/d4s2_webapp/defaults/main.yml
@@ -1,2 +1,3 @@
-d4s2_nginx_conf_dir: /etc/external/nginx
-d4s2_nginx_conf_file: nginx.conf
+d4s2_nginx:
+  conf_dir: /etc/external/nginx
+  conf_file: nginx.conf
