Add docker container for datadelivery-ui to d4s2_webapp
- Attempts to build from GitHub

--- a/d4s2_webapp/tasks/main.yml
+++ b/d4s2_webapp/tasks/main.yml
@@ -44,6 +44,17 @@
     state: started
     restart_policy: always
     command: python manage.py process_tasks
+- name: Build UI image
+  docker_image:
+    path: "{{ datadelivery_ui_repo }}"
+    name: datadelivery-ui
+- name: Create UI container
+    image: datadelivery-ui
+    name: ui
+    networks:
+      - name: "{{ d4s2_docker_network }}"
+    state: started
+    restart_policy: always
 - name: Create reverse proxy web container
   docker_container:
     image: nginx:1.13
