--- a/d4s2_webapp/defaults/main.yml
+++ b/d4s2_webapp/defaults/main.yml
@@ -1,3 +1,4 @@
+datadelivery_ui_repo: https://github.com/Duke-GCB/datadelivery-ui.git
 d4s2_nginx:
   conf_dir: /etc/external/nginx
   conf_file: nginx.conf
