--- a/d4s2_webapp/files/nginx.conf
+++ b/d4s2_webapp/files/nginx.conf
@@ -25,11 +25,16 @@ http {
     ssl_prefer_server_ciphers on;
 
     location / {
+      proxy_pass http://ui:80;
+    }
+
+    location ~ ^/(admin|ownership|auth|api|api-auth|api-auth-token|accounts|static)/  {
       proxy_pass http://d4s2-app:8000;
       proxy_set_header        Host $host;
       proxy_set_header        X-Real-IP $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
     }
+
   }
 }
