--- a/d4s2_webapp/tasks/migrate-database.yml
+++ b/d4s2_webapp/tasks/migrate-database.yml
@@ -10,6 +10,16 @@
     mode: 400
   with_items: "{{fixture_files}}"
 
+- name: Wait for postgres to become ready
+  docker_container:
+    command: "pg_isready -t 30 -h {d4s2_docker_env.POSTGRES_HOST}"
+    name: d4s2-loaddata
+    image: "{{ d4s2_docker_image }}"
+    pull: true
+    state: started
+    detach: false
+    env: "{{ d4s2_docker_env }}"
+
 - name: Specific Load Commands
   ignore_errors: yes
   docker_container:
