Begins role to build docker images on-demand
- Expects a Git repo and version
- Clones to the deploy host and builds locally
- Updated bespin-mailer and bespin-lando roles to use these

TODO:

- Streamline image naming from playbook down to the role
- Consider skipping docker build if git didn't change? But build should be cached anyawys

--- a/bespin_lando/tasks/main.yml
+++ b/bespin_lando/tasks/main.yml
@@ -5,11 +5,11 @@
 
 - name: Create app container
   docker_container:
-    image: "dukegcb/bespin-lando:{{ bespin_settings.lando.version }}"
+    image: "lando-built-ansible:{{ bespin_settings.lando.version }}"
     name: bespin-lando
     volumes:
       - /etc/lando_config.yml:/etc/lando_config.yml
-    pull: true
+    pull: false
     etc_hosts: "{{ bespin_hosts_list }}"
     state: started
     restart_policy: always
