--- a/bespin_job_watcher/tasks/main.yml
+++ b/bespin_job_watcher/tasks/main.yml
@@ -19,7 +19,7 @@
 
 - name: Create bespin-job-watcher container
   docker_container:
-    image: dukegcb/bespin-job-watcher
+    image: "{{ bespin_settings.job_watcher.build.image_name }}:{{ bespin_settings.job_watcher.build.version }}"
     name: bespin-job-watcher
     volumes:
       - /etc/external/:/etc/external/
