--- a/bespin_web/tasks/loaddata.yml
+++ b/bespin_web/tasks/loaddata.yml
@@ -20,7 +20,7 @@
   docker_container:
     command: "python manage.py {{ item }}"
     name: bespin-loaddata
-    image: "dukegcb/bespin-api:{{ bespin_settings.web.version }}-apache"
+    image: "{{ bespin_settings.web.build.secondary_image_name}}:{{ bespin_settings.web.build.version }}-apache"
     pull: true
     state: started
     detach: false
@@ -39,7 +39,7 @@
   docker_container:
     command: "python manage.py loaddata {{ bespin_settings.web.fixture_directory }}/{{ item }}"
     name: bespin-loaddata
-    image: "dukegcb/bespin-api:{{ bespin_settings.web.version }}-apache"
+    image: "{{ bespin_settings.web.build.secondary_image_name}}:{{ bespin_settings.web.build.version }}-apache"
     pull: true
     state: started
     detach: false
