--- a/imads_webapp/tasks/setup_portal.yml
+++ b/imads_webapp/tasks/setup_portal.yml
@@ -2,7 +2,7 @@
 
 - name: Create web portal container
   docker_container:
-    image: dukegcb/imads-apache
+    image: "{{ imads_web.build.image_name }}:{{ imads_web.build.version }}"
     name: web
     networks:
       - name: "{{ imads.network }}"
@@ -13,6 +13,6 @@
     ports:
       - "80:80"
       - "443:443"
-    pull: true
+    pull: false
     state: started
     restart_policy: always
