--- a/imads_webapp/tasks/setup_vacuum.yml
+++ b/imads_webapp/tasks/setup_vacuum.yml
@@ -2,7 +2,7 @@
 
 - name: Create database vacuum container
   docker_container:
-    image: "{{ imads_web.build.image_name }}:{{ imads_web.build.version }}"
+    image: "{{ imads.web.build.image_name }}:{{ imads.web.build.version }}"
     name: vacuum
     networks:
       - name: "{{ imads.network }}"
