Install nodejs in bespin_lando_worker
cwltool uses nodejs locally if installed. If not, it runs nodejs in Docker, which can lead to lots of additional docker containers

--- a/bespin_lando_worker/tasks/main.yml
+++ b/bespin_lando_worker/tasks/main.yml
@@ -9,6 +9,7 @@
     packages:
     - nfs-common
     - libssl-dev
+    - nodejs
 
 - pip:
     name: "git+git://github.com/Duke-GCB/lando.git@{{ lando_version }}"
