--- a/bespin_k8s_gcloud_cluster/tasks/create_cluster.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/create_cluster.yml
@@ -1,7 +1,7 @@
 - include: tasks/create_k8s_cluster.yml
 - include: tasks/get-service-account-credentials.yml
 - include_role:
-    name: bespin_k8s_cluster
+    name: bespin_k8s_namespace
     apply:
       environment:
         K8S_AUTH_API_KEY: "{{ gcloud_k8s_token }}"
