--- a/bespin_k8s_gcloud_cluster/tasks/get-service-account-credentials.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/get-service-account-credentials.yml
@@ -18,6 +18,9 @@
 - set_fact:
     gcloud_k8s_token: "{{ service_account_secret_details['data']['token'] | b64decode }}"
 
+- set_fact:
+    gcloud_k8s_verify_ssl: no
+
 - name: Fetch details about cluster so we can determine the hostname
   command: kubectl get endpoints kubernetes --output=jsonpath={.subsets[0].addresses[0].ip}
   register: kubectl_endpoints_info
